Fix: add the circle to navigate and fix the overflow in containers from slideshow

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@
   --bg-button-color-default: #ffffff;
   --bg-button-hover-color-default: #f2f2f2;
   --border-button-color-default: #7d7d7d;
+
+  --bg-slide-color: rgba(0, 0, 0, 0.342);
 }
 
 *::before,
